adding the nav header

--- a/optemus-tech/index.html
+++ b/optemus-tech/index.html
@@ -12,6 +12,24 @@
     <title>OptimusTech</title>
 </head>
 <body>
+    <header class="rodape">
+        <nav class="navbar">
+            <div class="navbar__logo">
+                <img src="img/worldwide 1 (Traced).png" alt="Logo OpitemusTech" class="navbar__logo-img">
+                <p class="navbar__logo-texto">OptimusTech</p>
+            </div>
+            <ul class="navbar__lista">
+                <li class="navbar__lista-item"><a href="#" class="navbar__lista-link">Home</a></li>
+                <li class="navbar__lista-item"><a href="#" class="navbar__lista-link">Produtos</a></li>
+                <li class="navbar__lista-item"><a href="#" class="navbar__lista-link">Recursos</a></li>
+                <li class="navbar__lista-item"><a href="#" class="navbar__lista-link">Sobre Nós</a></li>
+            </ul>
+            <div class="navbar__botoes">
+                <a href="#" class="navbar__botoes-entrar">Entrar</a>
+                <a href="#" class="navbar__botoes-cadastrar">Cadastrar</a>
+            </div>    
+        </nav>
+    </header>
     
 </body>
 </html>
