adding banner section

--- a/optemus-tech/index.html
+++ b/optemus-tech/index.html
@@ -30,6 +30,13 @@
             </div>    
         </nav>
     </header>
+    <main>
+        <section class="banner">
+            <h2 class="banner__titulo">Sobre Nós</h2>
+            <h1 class="banner__subtitulo">Por que somos diferentes?</h1>
+            <p class="banner__descricao">Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>        
+        </section>
+    </main>
     
 </body>
 </html>
