Adding dados section

--- a/optemus-tech/index.html
+++ b/optemus-tech/index.html
@@ -36,6 +36,30 @@
             <h1 class="banner__subtitulo">Por que somos diferentes?</h1>
             <p class="banner__descricao">Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>        
         </section>
+        <section class="dados">
+            <ul class="dados__lista">
+                <li class="dados__lista--item">
+                    <h2 class="dados__lista-quantidade">100+</h2>
+                    <h3 class="dados__lista-subtitulo">Colaboradores</h3>
+                    <p class="dados__lista-descricao">Nós ajudamos a construir mais de 400 projetos incríveis.</p>
+                </li>
+                <li class="dados__lista--item">
+                    <h2 class="dados__lista-quantidade">400+</h2>
+                    <h3 class="dados__lista-subtitulo">Projetos concluídos</h3>
+                    <p class="dados__lista-descricao">Temos mais de 100 colaboradores no nosso time que se preocupam com nossos clientes.</p>
+                </li>
+                <li class="dados__lista--item">
+                    <h2 class="dados__lista-quantidade">20k</h2>
+                    <h3 class="dados__lista-subtitulo">Downloads</h3>
+                    <p class="dados__lista-descricao">Nossos projetos que estão disponíveis em lojas já foram baixados mais de 20.000 vezes.</p>
+                </li>
+                <li class="dados__lista--item">
+                    <h2 class="dados__lista-quantidade">500+</h2>
+                    <h3 class="dados__lista-subtitulo">Reviews 5 estrelas</h3>
+                    <p class="dados__lista-descricao">Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos.</p>
+                </li>
+            </ul>
+        </section>
     </main>
     
 </body>
