Adding vagas section

--- a/optemus-tech/index.html
+++ b/optemus-tech/index.html
@@ -60,7 +60,55 @@
                 </li>
             </ul>
         </section>
+        <section class="vagas">
+            <div class="vagas__top">
+                <h3 class="vagas__titulo">Vagas Abertas!</h3>
+                <h2 class="vagas__subtitulo">Estamos procurando por talentos</h2>
+                <p class="vagas__descricao">Somos uma equipe 100% remota com pessoas do Brasil inteiro</p>
+                <div class="vagas__banner"></div>
+            </div>
+            <div class="vagas__design">
+                <h2 class="vagas__design--titulo">Design</h2>
+                <div class="vagas__vaga">
+                    <h3 class="vagas__vaga--titulo">Product Designer</h3>
+                    <div class="vagas__vaga--container">
+                        <p class="vaga--container__jornada">Full-time</p>
+                        <p class="vaga--container__salario">Faixa salarial: R$7.000</p>
+                    </div>
+                </div>
+                <div class="vagas__vaga">
+                    <h3 class="vagas__vaga--titulo">UX Designer</h3>
+                    <div class="vagas__vaga--container">
+                        <p class="vaga--container__jornada">Full-time</p>
+                        <p class="vaga--container__salario">Faixa salarial: R$6.000</p>
+                    </div>
+                </div>
+            </div>
+            <div class="vagas__dev">
+                <h2 class="vagas__dev--titulo">Desenvolvimento de Software</h2>
+                <div class="vagas__vaga">
+                    <h3 class="vagas__vaga--titulo">Desenvolvedor(a) iOS</h3>
+                    <div class="vagas__vaga--container">
+                        <p class="vaga--container__jornada">Full-time</p>
+                        <p class="vaga--container__salario">Faixa salarial: R$8.000</p>
+                    </div>
+                </div>
+                <div class="vagas__vaga">
+                    <h3 class="vagas__vaga--titulo">Desenvolvedor(a) Front-end</h3>
+                    <div class="vagas__vaga--container">
+                        <p class="vaga--container__jornada">Full-time</p>
+                        <p class="vaga--container__salario">Faixa salarial: R$7.000</p>
+                    </div>
+                </div>
+                <div class="vagas__vaga">
+                    <h3 class="vagas__vaga--titulo">Desenvolvedor(a) Back-end</h3>
+                    <div class="vagas__vaga--container">
+                        <p class="vaga--container__jornada">Full-time</p>
+                        <p class="vaga--container__salario">Faixa salarial: R$8.000</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-    
 </body>
 </html>
