Adding colaborator feedback section

--- a/optemus-tech/index.html
+++ b/optemus-tech/index.html
@@ -109,6 +109,15 @@
                 </div>
             </div>
         </section>
+        <section class="feedback">
+            <div class="feedback__container">
+                <h3 class="feedback__container--titulo">Veja o que nossos colaboradores falam sobre nós</h3>
+                <h2 class="feedback__container--subtitulo">OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível.</h2>
+                <img src="img/Avatar.png" alt="Avatar Julia Castro" class="feedback__container--avatar">
+                <h4 class="feedback__container--colaboradora">Júlia Castro</h4>
+                <p class="feedback__container--ocupacao">Desenvolvedora Web</p>
+            </div>
+        </section>
     </main>
 </body>
 </html>
