--- a/optemus-tech/index.html
+++ b/optemus-tech/index.html
@@ -12,7 +12,7 @@
     <title>OptimusTech</title>
 </head>
 <body>
-    <header class="rodape">
+    <header class="cabecalho">
         <nav class="navbar">
             <div class="navbar__logo">
                 <img src="img/worldwide 1 (Traced).png" alt="Logo OpitemusTech" class="navbar__logo-img">
@@ -119,5 +119,14 @@
             </div>
         </section>
     </main>
+    <footer class="rodape">
+        <h2 class="rodape__titulo">Acompanhe as nossas oportunidades</h2>
+        <p class="rodape__descricao">Seja o primeiro a saber quando novas vagas serão abertas!</p>
+        <div class="rodape__input">
+            <input type="email" placeholder="Seu e-mail" class="rodape__input--email">
+            <button type="submit"  class="rodape__input--botao">Cadastrar</button>
+        </div>
+        <p class="rodape__direitos">© 2022 OptimusTech. Todos os direitos reservados.</p>
+    </footer>
 </body>
 </html>
